--- a/Nisha_2211566_Assignment_5.ipynb
+++ b/Nisha_2211566_Assignment_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6AwbhZwkwwWqdZ+Gya3p2",
+      "authorship_tag": "ABX9TyOibBSkLLtyxnI74ITBYmJF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/nisha1365/TECHNICAL_TRAINING_CTS/blob/main/Nisha_2211566_Assignment_5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 59,
-      "metadata": {
-        "id": "weDHgFb6_684"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -58,7 +49,7 @@
       "metadata": {
         "id": "HrALzlUgapLC"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +65,7 @@
         "id": "3ZuUo_GBbt0N",
         "outputId": "58f7b0f1-da23-4bdc-ef44-56ad82afbd8e"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,6 +83,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Importing the necessay libraries"
+      ],
+      "metadata": {
+        "id": "hEgHsQf5NQ_k"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "xnIitSCScfUa"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "id": "WpIGc59vewwl",
         "outputId": "585708b1-e4db-4af7-cacd-9d094d890a5b"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,6 +163,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Machine Learning Terminology Feature - The input(s) to our model. In this case, a single value -- the degrees in celsius.\n",
+        "\n",
+        "Labels - The Output our model predicts. In this case, a single value --the degrees in Fahrenheit.\n",
+        "\n",
+        "Example - A pair of input/outputs used during training. In our case a pair of values from celsius_q and farenheit_a at a specific index such as (22.72)"
+      ],
+      "metadata": {
+        "id": "WOYJsBntHe6d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Machine Learning Terminology Feature - "
       ],
       "metadata": {
@@ -179,6 +192,23 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Next, create the model. We will use the simplest possible model we can ,a Dense network. Since the problem is straightforward, this network will require only a single layer, with a single neuron.\n",
+        "\n",
+        "### Build a layer\n",
+        "\n",
+        "We'll call the layer 'l0' and create it by instantiating tf.keras.layers.Dense' with the following configuration.\n",
+        "\n",
+        "* 'input_shape= = [1]' - This specifies that the input to this layer is a single valye. That is, the shape is a one - dimensional array with one member. Since this is the first layer, that input shape is the input shape of the entire model. The single value is a floating point number, representing degrees celsius.\n",
+        "\n",
+        "* 'units = 1' - This specifies the number of neurons in the layer. The number of neurons defines how many internal variables the layer has to try to learn how to solve the problem. Since this is the final layer, it is also the size of the model's output - a single float value representing degrees Farenheit.(In a multi layered network, the size and shape of the layer would need to match the input_shape of the next layer)"
+      ],
+      "metadata": {
+        "id": "J-UMyGmbI5U2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "l0 = tf.keras.layers.Dense(units=1,input_shape=[1])"
@@ -186,7 +216,7 @@
       "metadata": {
         "id": "wluVfkq5cir1"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +224,9 @@
       "source": [
         "### Assemble layers into the model\n",
         "\n",
-        "Once layers are defined, they need to be assembled into a model."
+        "Once layers are defined, they need to be assembled into a model.The Sequential model defination takes a list of layers as an argument, specifying the calculation order from the input to the output.\n",
+        "\n",
+        "This model has just a single layer, l0."
       ],
       "metadata": {
         "id": "QaoUhbqEhjhS"
@@ -208,17 +240,19 @@
       "metadata": {
         "id": "iuZjNqCChy9g"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Comple the model, with loss and optimizer functions\n",
+        "## Compile the model, with loss and optimizer functions\n",
         "\n",
         "Before training, the model has to be compiled. When compiled for training, the model is given:\n",
         "\n",
-        "* **Loss Function **- A way of measuringhow far off"
+        "* **Loss Function **- A way of measuringhow far off predictions are from the desired outcome is called the \"loss\".\n",
+        "\n",
+        "* Optimizer function - A way of adjusting internal values in order to reduce the loss."
       ],
       "metadata": {
         "id": "fU_1XVMYiOAq"
@@ -233,12 +267,16 @@
       "metadata": {
         "id": "neFCuw3Ui5IG"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "These are used during training (model.fit(), below) to first caluculate the loss at each point, and then improve it.In fact,the act of calculating the current loss of a model and then improving it is precisely what training is.\n",
+        "\n",
+        "During training, the optimizer function is used to calcualte adjustments to the model's internal variables.The goal is to adjust the internal vairables until the model mirrors the actual equation for converting celsius to Farenheit."
+      ],
       "metadata": {
         "id": "BPJ8dtDEkAQx"
       }
@@ -256,7 +294,7 @@
         "id": "TK9KhzEUkAnw",
         "outputId": "dd3c1514-5e2e-48d8-a271-4709a5dda2f8"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,6 +315,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The fit method returns a history object. We can use this object to plot how the loss of our model goes down after each epoch. A high loss means that the Farenheit degrees the model predicts is far from the corresponding value in farenheit_a.\n",
+        "\n",
+        "We'll use MAtplotlib to visualise this, as you can see, our model improves very quickly at first, and then has a steady, slow improvement until it is very near \"perfect\" towards the end."
+      ],
+      "metadata": {
+        "id": "XvwD0BjZMd6J"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -292,7 +341,7 @@
         "id": "_SavoEhDiUHT",
         "outputId": "eb0a8eeb-ec9e-4310-b925-ab6cfce3396a"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -320,7 +369,7 @@
         "id": "FnuIdTk0hnaa",
         "outputId": "8acd5210-5257-44f0-ce02-2d7d1e978318"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,9 +383,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Looking at the layer weights\n",
+        "\n"
+      ],
       "metadata": {
         "id": "moIFet19oL1e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finally,let's print the internal variables of the Dense Layer"
+      ],
+      "metadata": {
+        "id": "2BPTspy9HTMd"
       }
     },
     {
@@ -351,7 +412,7 @@
         "id": "QhDcY3h2ofaW",
         "outputId": "7445152d-528c-4b95-c71e-617b412c6c61"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,6 +422,25 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The first variable is close to 1.8 and the second to 32. These values(1.8 and 32) are the actual variables in the real conversion formula.\n",
+        "\n",
+        "This is really close to the values in the conversion formula.\n",
+        "\n",
+        "Dense layer works, but for a single neuron with a single input and a single output, the internal math looks the same as the equation for a line, y = mx +b, which has the same form as a conversion equation, f = 1.8c+32.\n",
+        "\n",
+        "Since the form is the same, the variables should converge on the standard values of 1.8 and 32, which is exactly what happened.\n",
+        "\n",
+        "With additional neurons, additional inputs, and outputs, the formula becomes much more complex, but the idea is the same.\n",
+        "\n",
+        "A little experiment just for fun, what if we created more Dense layers with different units, which therefore also has more variables."
+      ],
+      "metadata": {
+        "id": "e3Bc415qD_cS"
+      }
     },
     {
       "cell_type": "code",
@@ -385,7 +465,7 @@
         "id": "bE8rbshwqLc3",
         "outputId": "e4b3e48e-7863-45b2-aad1-18173e3d4932"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,13 +492,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "As you can see, this model is also able to predict the corresponding Farenheit value really well. But when you look at the variables(weights) in the l0 and l1 layers, they are nothing even close to  1.8 and 32. The added complexity hides the \"simple\" form of the conversion equation."
+      ],
       "metadata": {
-        "id": "h0wsiMoxqR7v"
-      },
-      "execution_count": 71,
-      "outputs": []
+        "id": "Dz5PVkF_DOti"
+      }
     }
   ]
 }
