--- a/Nisha_2211566_Regression.ipynb
+++ b/Nisha_2211566_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsDVdut54IV+TdogcOdvrs",
+      "authorship_tag": "ABX9TyNNALZXVrNnhEyDM+hEELt7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "vpVvqUEdo-IW"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "vCAe1T4hpEih"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "id": "LDxHMUEwpMM7",
         "outputId": "39124b79-0dc9-4054-badb-185d00362156"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "K58QmbNbpWoY"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "id": "gBpGr7uxpeIw",
         "outputId": "c7a64fe3-3294-4368-ffef-397957105750"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -359,7 +359,7 @@
         "id": "i28LUOhipjee",
         "outputId": "57526a67-e596-4af1-cadf-4b21364d991c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +398,7 @@
       "metadata": {
         "id": "PZN864G9ppiS"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "sQQOSpXPpy3w"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -435,7 +435,7 @@
         "id": "LzxnApK1p1r-",
         "outputId": "cdcf1e05-efed-4f1e-8b72-38f0323fb218"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -661,7 +661,7 @@
       "metadata": {
         "id": "_DlfJ3pnp7e8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +690,7 @@
         "id": "5i6GpFjnqDzL",
         "outputId": "586defcd-35fd-45e7-d457-ee1c7be12487"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +738,7 @@
         "id": "VFYoBXjJqMAo",
         "outputId": "0eb27756-b353-4033-95e2-e8bbae1665e7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1020,7 +1020,7 @@
       "metadata": {
         "id": "wllinnUaqTtO"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1047,7 +1047,7 @@
         "id": "tosX0xPfqa_v",
         "outputId": "61bb77a2-066b-4107-f4f6-0b5cd75d06cf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1262,7 +1262,7 @@
       "metadata": {
         "id": "IeoaxbgXqhsy"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1282,7 +1282,7 @@
       "metadata": {
         "id": "8MdLEX30qs8b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1306,7 +1306,7 @@
         "id": "yEeuHxorqyu3",
         "outputId": "54daefd8-1c09-46ef-a02c-d5c55e14da50"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,7 +1344,7 @@
         "id": "-n_PoYWZq46c",
         "outputId": "f08464c3-46d5-41d7-ef44-2bef1574e11f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,7 +1388,7 @@
       "metadata": {
         "id": "nJSuLmwfrGCQ"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1417,7 +1417,7 @@
         "id": "vs07zzJArQX1",
         "outputId": "4d1c8439-de1d-452b-a622-e4cfb4eb9680"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,7 +1464,7 @@
         "id": "YHT0cn-YrXKh",
         "outputId": "ae1d8b55-59d2-4e66-bb78-13af1b9aa46c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1513,7 +1513,7 @@
       "metadata": {
         "id": "BMyharJsrfi-"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1546,7 +1546,7 @@
         "id": "GeOLoLLmrkyg",
         "outputId": "1338d5b7-ca88-4501-eeda-17b443bf5b3a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1582,7 +1582,7 @@
         "id": "RmBErvgGrtBN",
         "outputId": "49976778-4adc-4c33-9cae-a95685b8cec5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1754,7 +1754,7 @@
       "metadata": {
         "id": "rgLohBZPryp3"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1770,7 +1770,7 @@
         "id": "X7k7Joc_r1co",
         "outputId": "cb61e033-a541-4878-f9c2-4d890e829d67"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1807,7 +1807,7 @@
       "metadata": {
         "id": "zJE35TtMr57n"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1832,7 +1832,7 @@
         "id": "ublDdHdAr-4v",
         "outputId": "4cdbfea9-9a48-441c-b766-b1d2c5a0a5aa"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1856,7 +1856,7 @@
       "metadata": {
         "id": "ov5qJ-v_sEIf"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1872,7 +1872,7 @@
         "id": "bhJkgSFesHfC",
         "outputId": "a9fbd84b-1e53-49ce-92ed-19f17816f97d"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1911,7 +1911,7 @@
       "metadata": {
         "id": "aGB6LMy2sNxw"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1935,7 +1935,7 @@
         "id": "_4kzOP8CsTt7",
         "outputId": "92b6623f-7b88-46cc-fcf1-e7db86f96d30"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1986,7 +1986,7 @@
         "id": "3-bpxDQcsbSV",
         "outputId": "77b6ca45-8493-472f-a4a2-25082c41c3f7"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2028,7 +2028,7 @@
       "metadata": {
         "id": "-UYOIPDfshdY"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2051,7 +2051,7 @@
         "id": "_tzHrEGMslyb",
         "outputId": "e414c984-e04b-4129-e31f-74e73c381bb8"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2085,7 +2085,7 @@
         "id": "Y3paf8hqspWO",
         "outputId": "1a99835e-d1d4-4e3d-bdea-2e9eaa44236e"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2119,7 +2119,7 @@
       "metadata": {
         "id": "sWvRfQ-YpSTp"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2162,7 +2162,7 @@
       "metadata": {
         "id": "iqK6k7Lzs_rP"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2185,7 +2185,7 @@
       "metadata": {
         "id": "w05z6PnMtHXu"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2209,7 +2209,7 @@
         "id": "Z7zL5fBjtMtz",
         "outputId": "4ebc3dbb-0390-49e1-ba65-fb8d33fa6492"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2263,7 +2263,7 @@
         "id": "SQmdm6jwtUYS",
         "outputId": "d942207e-b174-4987-b0e7-6b52e28b484d"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2297,7 +2297,7 @@
         "id": "YIJk01ETtZz6",
         "outputId": "6bf9b992-fd7e-40ae-b66b-0c42058e71d3"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2335,7 +2335,7 @@
         "id": "0Go7c-tytgbM",
         "outputId": "28bb700a-6fc5-4707-da89-111abf541526"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2359,7 +2359,7 @@
         "id": "QPu5qlE-tk__",
         "outputId": "5aebc0fe-2eab-43c5-a089-25f92b506798"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2394,7 +2394,7 @@
       "metadata": {
         "id": "sObCS4c0tpBu"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2420,7 +2420,7 @@
         "id": "-ZENUuuos9g1",
         "outputId": "353ed8b8-b10f-434a-cc88-64b697747a31"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2465,7 +2465,7 @@
         "id": "dkO1ZX7dt1CM",
         "outputId": "3d3847d8-0a8a-49f7-8e02-aa8db3da073a"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2490,7 +2490,7 @@
         "id": "3hFuXCs-t4VB",
         "outputId": "f825762b-178d-4d6e-883c-4b864df7dc31"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2523,7 +2523,7 @@
       "metadata": {
         "id": "Sw3ArLXLt8MK"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2550,7 +2550,7 @@
         "id": "GyaEex1yuCZW",
         "outputId": "5c2173e4-7af8-49cc-8c37-70c35efa611b"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2725,7 +2725,7 @@
         "id": "vKzepnRXuKA4",
         "outputId": "9a7bec9e-c70f-47de-a2d3-2e016715513d"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2775,7 +2775,7 @@
         "id": "YI3QO_n7uSaK",
         "outputId": "3801985d-8bd3-45a0-da88-64416b3e4c91"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2799,7 +2799,7 @@
       "metadata": {
         "id": "Ufy0ete8uYGu"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2822,7 +2822,7 @@
       "metadata": {
         "id": "54ougDufucOf"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2838,7 +2838,7 @@
         "id": "fSALnCK_ugYj",
         "outputId": "e3d3cd8b-20b4-44a1-af6d-cdbdebd7c9cd"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2992,8 +2992,7 @@
         "\n",
         "Mean squared error (MSE) (tf.keras.losses.MeanSquaredError) and mean absolute error (MAE) (tf.keras.losses.MeanAbsoluteError) are common loss functions used for regression problems. MAE is less sensitive to outliers. Different loss functions are used for classification problems.\n",
         "Similarly, evaluation metrics used for regression differ from classification.\n",
-        "When numeric input data features have values with different ranges, each feature should be scaled independently to the same range.\n",
-        "Overfitting is a common problem for DNN models, though it wasn't a problem for this tutorial. Visit the Overfit and underfit tutorial for more help with this."
+        "When numeric input data features have values with different ranges, each feature should be scaled independently to the same range."
       ],
       "metadata": {
         "id": "r7KwBNZUulNG"
