--- a/Nisha_2211566_Assignment_7.ipynb
+++ b/Nisha_2211566_Assignment_7.ipynb
@@ -37,8 +37,8 @@
         "import pandas as pd # Working With Data Frames\n",
         "import numpy as np #Working with arrays\n",
         "import tensorflow as tf # Create production-grade machine learning models on any device with TensorFlow by Google.\n",
-        "import ssl #T his module provides access to Transport Layer Security (often known as “Secure Sockets Layer”) encryption and peer authentication facilities for network sockets, both client-side and server-side.\n",
-        "ssl._create_default_https_context = ssl._create_unverified_context\n",
+        "import ssl  #This module provides access to Transport Layer Security (often known as “Secure Sockets Layer”) encryption and peer authentication facilities for network sockets, both client-side and server-side.\n",
+        "ssl._create_default_https_context = ssl._create_unverified_context \n",
         "import matplotlib.pyplot as plt # Data Vizualization"
       ]
     },
@@ -942,7 +942,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Building the Model"
+        "# Building the Model"
       ],
       "metadata": {
         "id": "en3WuX-NsP4t"
