--- a/Color_to_gray_scale.ipynb
+++ b/Color_to_gray_scale.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMzlvQkdFzPNVyVak5tJ92/",
+      "authorship_tag": "ABX9TyNmvg6Y+LYxGedg2J/XlbHY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -480,21 +480,77 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def Cartoon(image_color):\n",
+        "\n",
+        "    output_image = cv2.stylization(image_color, sigma_s=100, sigma_r=0.3)\n",
+        "\n",
+        "    return output_image"
+      ],
       "metadata": {
         "id": "V6JP0JK6m-Ka"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def LiveCamEdgeDetection_canny(image_color):\n",
+        "\n",
+        "    threshold_1 = 30\n",
+        "    threshold_2 = 80\n",
+        "    image_gray = cv2.cvtColor(image_color, cv2.COLOR_BGR2GRAY)\n",
+        "    canny = cv2.Canny(image_gray, threshold_1, threshold_2)\n",
+        "\n",
+        "    return canny\n"
+      ],
       "metadata": {
         "id": "fdjGZZLpm_VU"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cap = cv2.VideoCapture(0)\n",
+        " \n",
+        "while True:\n",
+        "    ret, frame = cap.read() # Cap.read() returns a ret bool to indicate success.\n",
+        "    # cv2.imshow('Live Edge Detection', Cartoon(frame))\n",
+        "\n",
+        "    cv2.imshow('Live Edge Detection', LiveCamEdgeDetection_canny(frame))\n",
+        "    cv2.imshow('Webcam Video', frame)\n",
+        "    if cv2.waitKey(1) == 13: #13 Enter Key\n",
+        "        break\n",
+        "\n",
+        "cap.release() # camera release \n",
+        "cv2.destroyAllWindows()  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "id": "9XCV4F_nuztX",
+        "outputId": "37e9c681-60f3-41ff-e252-4626926eecf3"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "error",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-35-37d6c69530bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# cv2.imshow('Live Edge Detection', Cartoon(frame))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Live Edge Detection'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLiveCamEdgeDetection_canny\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Webcam Video'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwaitKey\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m13\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#13 Enter Key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-34-857128a0fe4c>\u001b[0m in \u001b[0;36mLiveCamEdgeDetection_canny\u001b[0;34m(image_color)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mthreshold_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mthreshold_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m80\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mimage_gray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcvtColor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_color\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCOLOR_BGR2GRAY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mcanny\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCanny\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_gray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthreshold_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthreshold_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31merror\u001b[0m: OpenCV(4.6.0) /io/opencv/modules/imgproc/src/color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n"
+          ]
+        }
+      ]
     }
   ]
 }
