--- a/Nisha_2211566_Assignment_8.ipynb
+++ b/Nisha_2211566_Assignment_8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaFaEv2uG00XUiVkFm0ElU",
+      "authorship_tag": "ABX9TyPKNfdMnJ8OYNqE2JTfIC/2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,15 @@
         "import matplotlib.image as mpimg\n",
         "import matplotlib.pyplot as plt\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "OpenCV is a great tool for image processing and performing computer vision tasks. It is an open-source library that can be used to perform tasks like face detection, objection tracking, landmark detection, and much more. It supports multiple languages including python, java C++."
+      ],
+      "metadata": {
+        "id": "qBe-jbDu4c2k"
+      }
     },
     {
       "cell_type": "code",
@@ -116,6 +125,15 @@
           "execution_count": 230
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**3 means Picture is in \"RGB\" format, colored one.**"
+      ],
+      "metadata": {
+        "id": "50v95mYr4lNF"
+      }
     },
     {
       "cell_type": "code",
@@ -210,6 +228,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Shape of the input Image"
+      ],
+      "metadata": {
+        "id": "OGvd9V1L4vDp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "image_color.shape"
@@ -234,6 +261,15 @@
           "execution_count": 235
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## \"RGB\" format to \"GRAY\" colored Image."
+      ],
+      "metadata": {
+        "id": "bJvHg7J24zJi"
+      }
     },
     {
       "cell_type": "code",
@@ -422,13 +458,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Used masking to get only the desired road part out of the given input image.**"
+      ],
       "metadata": {
-        "id": "OsNExqgtS2nD"
-      },
-      "execution_count": 242,
-      "outputs": []
+        "id": "k6ZeXkhN5GUl"
+      }
     }
   ]
 }
