--- a/Nisha_2211566_Assignment_8.ipynb
+++ b/Nisha_2211566_Assignment_8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKNfdMnJ8OYNqE2JTfIC/2",
+      "authorship_tag": "ABX9TyObouUn7Vd4t6fULtOv/CIf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,6 +464,15 @@
       ],
       "metadata": {
         "id": "k6ZeXkhN5GUl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Masking is used in Image Processing to output the Region of Interest, or simply the part of the image that we are interested in. We tend to use bitwise operations for masking as it allows us to discard the parts of the image that we do not need"
+      ],
+      "metadata": {
+        "id": "TcVLOwfR6Wo4"
       }
     }
   ]
