--- a/Nisha_2211566_Case_Study_3_NLP.ipynb
+++ b/Nisha_2211566_Case_Study_3_NLP.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +38,15 @@
         "import numpy as np\n",
         "import re\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Choosing File for Analysis**"
+      ],
+      "metadata": {
+        "id": "KqzYdbzOc22M"
+      }
     },
     {
       "cell_type": "code",
@@ -729,6 +739,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Stop words are a set of commonly used words in any language. For example, in English, “the”, “is” and “and”, would easily qualify as stop words. In NLP and text mining applications, stop words are used to eliminate unimportant words, allowing applications to focus on the important words instead.**"
+      ],
+      "metadata": {
+        "id": "uo3-xxGtdxqd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "reviews_lower = [txt.lower() for txt in reviews_list]"
@@ -811,6 +830,15 @@
       ],
       "metadata": {
         "id": "-xkndgEMc2rF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Tokenization is used in natural language processing to split paragraphs and sentences into smaller units that can be more easily assigned meaning. The first step of the NLP process is gathering the data (a sentence) and breaking it into understandable parts (words)**"
+      ],
+      "metadata": {
+        "id": "SspX7BXGd6Li"
       }
     },
     {
@@ -1215,6 +1243,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**TF-IDF stands for term frequency-inverse document frequency and it is a measure, used in the fields of information retrieval (IR) and machine learning, that can quantify the importance or relevance of string representations (words, phrases, lemmas, etc) in a document amongst a collection of documents**"
+      ],
+      "metadata": {
+        "id": "bh4X7fM0eGRz"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.feature_extraction.text import TfidfVectorizer"
@@ -1317,6 +1354,24 @@
       ],
       "metadata": {
         "id": "N_mAME4Ge080"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Random Forest Regression is a supervised learning algorithm that uses ensemble learning method for regression. Ensemble learning method is a technique that combines predictions from multiple machine learning algorithms to make a more accurate prediction than a single model.**"
+      ],
+      "metadata": {
+        "id": "CbZyQQKvePhT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Gradient boosting Regression calculates the difference between the current prediction and the known correct target value. This difference is called residual. After that Gradient boosting Regression trains a weak model that maps features to that residual.**"
+      ],
+      "metadata": {
+        "id": "tkEYHvzFeY3X"
       }
     },
     {
@@ -1525,6 +1580,15 @@
       ],
       "metadata": {
         "id": "iWl_-RNZmLR0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**GridSearchCV is a technique for finding the optimal parameter values from a given set of parameters in a grid. It's essentially a cross-validation technique. The model as well as the parameters must be entered. After extracting the best parameter values, predictions are made.**"
+      ],
+      "metadata": {
+        "id": "JmzoMI7TemlW"
       }
     },
     {
